--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,8 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm install
+      - name: Give execute permission to vite
+        run: chmod +x node_modules/.bin/vite
       - name: Build
         run: npm run build
       - name: Setup Pages
