--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:github": "cross-env VITE_BASE_PATH=/historical-news/ vite build",
+    "build:vercel": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build:github",
     "deploy": "gh-pages -d dist"
   },
- "dependencies": {
+  "dependencies": {
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
-},
-"devDependencies": {
+  },
+  "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "cross-env": "^7.0.3",
     "gh-pages": "^6.3.0",
     "vite": "^5.4.2"
-}
+  }
 }
