--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:github": "cross-env VITE_BASE_PATH=/historical-news/ vite build",
-    "build:vercel": "vite build",
+    "build:github": "build-github.bat",
+    "build:vercel": "build-vercel.bat",
     "preview": "vite preview",
-    "predeploy": "npm run build:github",
+    "predeploy": "build-github.bat",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -22,7 +22,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "cross-env": "^7.0.3",
     "gh-pages": "^6.3.0",
     "vite": "^5.4.2"
   }
